--- a/redux-practice/src/App.css
+++ b/redux-practice/src/App.css
@@ -1,1 +1,25 @@
-
+body {
+  background-color: #6ea3ca;
+}
+.App {
+  width: 800px;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 30px;
+}
+.title {
+  color: white;
+}
+input {
+  padding: 10px 60px;
+  font-size: 17px;
+}
+button {
+  padding: 10px 40px;
+  font-size: 17px;
+  margin-left: 10px;
+}
+.title {
+  font-size: 25px;
+  margin-bottom: 20px;
+}
